# dual_arm_ctrl

./: .gitignore
src/dual_arm_control/: CMakeLists.txt  package.xml
src/dual_arm_control/description/dummy2_arm_config/: .setup_assistant
src/dual_arm_control/description/dummy2_arm_config/config/: dummy2-gripperv2.ros2_control.xacro  dummy2-gripperv2.srdf  dummy2-gripperv2.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/dual_arm_control/description/dummy2_dual_arm_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dual_arm_control/description/dummy2_dual_arm_config/config/: dummy2-dual-gripperv2.ros2_control.xacro  dummy2-dual-gripperv2.srdf  dummy2-dual-gripperv2.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/dual_arm_control/description/simulation/: README.md  dummy2.py
src/dual_arm_control/description/simulation/dummy2/: dummy2.urdf
src/dual_arm_control/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  moveit_rviz_with_control.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/dual_arm_control/src/: target_planning.cpp
